# ts-go-rust-projector

./: .gitignore  README.md
go/: conf.json  go.mod  go.sum
go/cmd/p2/: main.go
go/cmd/projector/: main.go
go/pkg/projector/: config.go  config_test.go  opts.go  projector.go  projector_test.go
playground/: Cargo.toml  a.out  go.mod  package.json  test.cpp  test.ts
playground/cmd/: main.go
playground/src/: main.rs
rust/: Cargo.toml  conf.json
rust/src/: config.rs  lib.rs  opts.rs  projector.rs
typescript/: conf.json  jest.config.ts  package.json
typescript/src/: config.ts  index.ts  opts.ts  projector.ts
typescript/src/__tests__/: config.ts  projector.ts
