[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
collection_macros = "0.2.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
